--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -1,10 +1,41 @@
 <!DOCTYPE html>
+
 <html>
-  <head>
-    <meta charset="UTF-8">
+<head>
+  <meta charset="UTF-8">
     <title>title</title>
   <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
-  </head>
+    
+<title>HSTRYnLA</title>
+
+<style>
+body {
+   background-color: #000000;
+   color: #FFFFFF;
+   font-family: 'Vollkorn', serif;
+   font-size: 10px;
+   letter-spacing: 1.5px;
+   line-height: 20px;
+   padding: 200px;
+}
+h1 {
+   font-size: 10px;
+   margin-bottom: -12px;
+}
+h2 {
+   font-size: 14px;
+}
+   
+a
+{
+    color: #ffffff;
+   text-decoration: none;
+}
+   
+</style>
+
+</head>
+  
   <body>
   <h1></h1>
 <br>
