--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -10,25 +10,25 @@
 
 <style>
 body {
-   background-color: #000000;
-   color: #FFFFFF;
-   font-family: 'Vollkorn', serif;
-   font-size: 10px;
+   background-color: #FFFFFF;
+   color: #000000;
+   font-family: 'VT323', serif;
+   font-size: 13px;
    letter-spacing: 1.5px;
    line-height: 20px;
    padding: 200px;
 }
 h1 {
-   font-size: 10px;
+   font-size: 13px;
    margin-bottom: -12px;
 }
 h2 {
-   font-size: 14px;
+   font-size: 15px;
 }
    
 a
 {
-    color: #ffffff;
+    color: #000000;
    text-decoration: none;
 }
    
