--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -13,7 +13,7 @@ body {
    background-color: #FFFFFF;
    color: #000000;
    font-family: 'VT323', serif;
-   font-size: 13px;
+   font-size: 19px;
    letter-spacing: 1.5px;
    line-height: 20px;
    padding: 200px;
@@ -37,9 +37,7 @@ a
 </head>
   
   <body>
-  <h1></h1>
-<br>
-Arrival: 25.07.2018 11:01PM PDT N 33° 56' 47.224''	W 118° 24' 28.757''
+  <h1>Arrival: 25.07.2018 11:01PM PDT N 33° 56' 47.224''	W 118° 24' 28.757''</h1>
 <br><br>
 08.03.2018 • The Roxy • Kedr Livianskiy • LD <br>
 08.04.2018 • The Roxy • Young M.A. • LD <br>
