--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -39,9 +39,12 @@ a
   <body>
   <h1>Arrival: 25.07.2018 11:01PM PDT N 33° 56' 47.224''	W 118° 24' 28.757''</h1>
 <br><br>
+<p dir="rtl">
 08.03.2018 • The Roxy • Kedr Livianskiy • LD <br>
 08.04.2018 • The Roxy • Young M.A. • LD <br>
 08.07.2018 • Capitol • DJ Durel ft. Migos "Hot Summer" • PA <br>
 08.09.2019 <br>
+
+</p>
   </body>
 </html>
