--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -39,74 +39,32 @@ a
   <body>
   <h1>Arrival: 25.07.2018 11:01PM PDT N 33° 56' 47.224''	W 118° 24' 28.757''</h1>
 <br>
-<script language="JavaScript1.2" type="text/javascript">function setcountup(theyear,themonth,theday){
-yr=theyear;mo=themonth;da=theday
+
+<script>
+/*
+* Basic Count Up from Date and Time
+*/
+window.onload=function() {
+  // Month,Day,Year,Hour,Minute,Second
+  upTime('jul,25,2018,23:01:00'); // ****** Change this line!
 }
+function upTime(countTo) {
+  now = new Date();
+  countTo = new Date(countTo);
+  difference = (now-countTo);
 
-//////////CONFIGURE THE countup SCRIPT HERE//////////////////
+  days=Math.floor(difference/(60*60*1000*24)*1);
+  hours=Math.floor((difference%(60*60*1000*24))/(60*60*1000)*1);
+  mins=Math.floor(((difference%(60*60*1000*24))%(60*60*1000))/(60*1000)*1);
+  secs=Math.floor((((difference%(60*60*1000*24))%(60*60*1000))%(60*1000))/1000*1);
 
-//STEP 1: Configure the date to count up from, in the format year, month, day:
-//This date should be less than today
-setcountup(2018,7,26)
+  document.getElementById('days').firstChild.nodeValue = days;
+  document.getElementById('hours').firstChild.nodeValue = hours;
+  document.getElementById('minutes').firstChild.nodeValue = mins;
+  document.getElementById('seconds').firstChild.nodeValue = secs;
 
-//STEP 2: Configure text to be attached to count up
-var displaymessage="elapsed"
-
-
-
-//STEP 3: Configure the below 5 variables to set the width, height, background color, and text style of the countup area
-var countupwidth='90%'
-var countupheight='13px' //applicable only in NS4
-var countupbgcolor=''
-var opentags='<font face="VT323"><large>'
-var closetags='</large></font>'
-
-//////////DO NOT EDIT PASS THIS LINE//////////////////
-
-var montharray=new Array("Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec")
-var crosscount=''
-
-function start_countup(){
-if (document.layers)
-document.countupnsmain.visibility="show"
-else if (document.all||document.getElementById)
-crosscount=document.getElementById&&!document.all?document.getElementById("countupie") : countupie
-countup()
-}
-
-if (document.all||document.getElementById)
-document.write('<span id="countupie" style="width:'+countupwidth+'; background-color:'+countupbgcolor+'"></span>')
-
-window.onload=start_countup
-
-
-function countup(){
-var today=new Date()
-var todayy=today.getYear()
-if (todayy < 1000)
-todayy+=1900
-var todaym=today.getMonth()
-var todayd=today.getDate()
-var todayh=today.getHours()
-var todaymin=today.getMinutes()
-var todaysec=today.getSeconds()
-var todaystring=montharray[todaym]+" "+todayd+", "+todayy+" "+todayh+":"+todaymin+":"+todaysec
-paststring=montharray[mo-1]+" "+da+", "+yr
-paststring="10:00"+montharray[mo-1]+" "+da+", "+yr
-dd=Date.parse(todaystring)-Date.parse(paststring)
-dday=Math.floor(dd/(60*60*1000*24)*1)
-dhour=Math.floor((dd%(60*60*1000*24))/(60*60*1000)*1)
-dmin=Math.floor(((dd%(60*60*1000*24))%(60*60*1000))/(60*1000)*1)
-dsec=Math.floor((((dd%(60*60*1000*24))%(60*60*1000))%(60*1000))/1000*1)
-
-if (document.layers){
-document.countupnsmain.document.countupnssub.document.write(opentags+dday+ " days, "+dhour+" hours, "+dmin+" minutes, and "+dsec+" seconds "+displaymessage+closetags)
-document.countupnsmain.document.countupnssub.document.close()
-}
-else if (document.all||document.getElementById)
-crosscount.innerHTML=opentags+dday+ " days, "+dhour+" hours, "+dmin+" minutes, and "+dsec+" seconds "+displaymessage+closetags
-
-setTimeout("countup()",1000)
+  clearTimeout(upTime.to);
+  upTime.to=setTimeout(function(){ upTime(countTo); },1000);
 }
 </script>
 
