--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -70,8 +70,13 @@ function upTime(countTo) {
     display: inline-block;
     padding: 10px;
     background: #FFFFFF;
+    font-family: 'VT323', serif;
+    font-size: 19px;
+    letter-spacing: .5px;
+   line-height: 20px;
+   padding: 20px;
     margin: 0 0 20px;
-    border-radius: 3px;
+    border-radius: 1px;
     color: black;
     min-width: 2.6rem;
 }
