--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -84,7 +84,7 @@ function upTime(countTo) {
 <br>
 
 <div id="countup">
-  It's been
+ 
   <p id="days">00</p>
   <p class="timeRefDays">days</p>
   <p id="hours">00</p>
@@ -93,6 +93,7 @@ function upTime(countTo) {
   <p class="timeRefMinutes">minutes</p>
   <p id="seconds">00</p>
   <p class="timeRefSeconds">second</p>
+	.elapsed
 </div>
 
 <br>
