--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -74,6 +74,9 @@ function upTime(countTo) {
     border-radius: 0px;
     color: black;
     min-width: 1rem;
+    font-family: 'VT323', serif;
+    font-size: 19px;
+
 }
 </style>
 
