--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -96,7 +96,7 @@ function upTime(countTo) {
   <p class="timeRefMinutes">minutes</p>
   <p id="seconds">00</p>
   <p class="timeRefSeconds">second</p>
-	< span style="font-size:13px" >.elapsed < /span>
+	.elapsed 
 </div>
 
 <br>
