--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -96,7 +96,7 @@ function upTime(countTo) {
   <p class="timeRefMinutes">minutes</p>
   <p id="seconds">00</p>
   <p class="timeRefSeconds">second</p>
-	.elapsed 
+	<h2>.elapsed </h2>
 </div>
 
 <br>
