--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -83,7 +83,7 @@ function upTime(countTo) {
 </head>
   
   <body>
-  <h1>Arrival: 25.07.2018 11:01PM PDT N 33° 56' 47.224''	W 118° 24' 28.757''</h1>
+  <h1>Arrival: 25.07.2018 11:01PM PDT N 33° 56' 47.224''	W 118° 24' 28.757''
 <br>
 
 <div id="countup">
@@ -96,7 +96,7 @@ function upTime(countTo) {
   <p class="timeRefMinutes">minutes</p>
   <p id="seconds">00</p>
   <p class="timeRefSeconds">second</p>
-	<h2>.elapsed </h2>
+     .elapsed </h1>
 </div>
 
 <br>
