--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="UTF-8">
-    <title>title</title>
+    <title>HSTRYnLA</title>
   <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
     
 <title>HSTRYnLA</title>
