--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -36,7 +36,7 @@ a
 </style>
 
 <script>
-	/*
+  /*
 * Basic Count Up from Date and Time
 */
 window.onload=function() {
@@ -87,7 +87,8 @@ function upTime(countTo) {
 </head>
   
   <body>
-  <h1>Arrival: 25.07.2018 11:01PM PDT N 33° 56' 47.224''	W 118° 24' 28.757''
+
+  <h1><div align="justify">Arrival: 25.07.2018 11:01PM PDT N 33° 56' 47.224''  W 118° 24' 28.757'' </div>
 <br>
 
 <div id="countup">
