--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -123,7 +123,7 @@ function upTime(countTo) {
 08.03.2018 • The Roxy • Kedr Livianskiy • LD <br>
 08.04.2018 • The Roxy • Young M.A. • LD <br>
 08.07.2018 • Capitol • DJ Durel ft. Migos "Hot Summer" • PA <br>
-08.09.2019 <br>
+08.10.2018 • The Roxy • Photoshoot • LD <br>
 • • • <br>
 • • • <br>
 • • • <br>
