--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -124,7 +124,7 @@ function upTime(countTo) {
 08.04.2018 • The Roxy • Young M.A. • LD <br>
 08.07.2018 • Capitol • DJ Durel ft. Migos "Hot Summer" • PA <br>
 08.10.2018 • The Roxy • Photoshoot • LD <br>
-• • • <br>
+08.10.2018 • Intercommunity Care Center • Rich the Kid "leave Me" • PA <br>
 • • • <br>
 • • • <br>
 
