--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -121,7 +121,7 @@ function upTime(countTo) {
 <br>
 <p dir="rtl">
 08.03.2018 • The Roxy • Kedr Livianskiy • LD <br>
-08.04.2018 • The Roxy • Young M.A. • LD <br>
+08.04.2018 • The Roxy • Young M.A. • SM <br>
 08.07.2018 • Capitol • DJ Durel ft. Migos "Hot Summer" • PA <br>
 08.10.2018 • The Roxy • Photoshoot • LD <br>
 08.10.2018 • Intercommunity Care Center • Rich the Kid "leave Me" • PA <br>
