--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -77,14 +77,14 @@
 
   }
   </style>
+
 </head>
-<body>
-  <div align="justify">
-    <h1>Arrival: 25.07.2018 11:01PM PDT N 33° 56' 47.224'' W 118° 24' 28.757'' </h1>
-    <div id="countup">
-      <h1></h1>
-    </div>
-  </div>
+
+  <body>
+
+  <h1><div align="justify">Arrival: 25.07.2018 11:01PM PDT N 33° 56' 47.224''  W 118° 24' 28.757'' </div>
+
+<div id="countup">
   <p id="days">00</p>
   <p class="timeRefDays">days</p>
   <p id="hours">00</p>
@@ -92,14 +92,20 @@
   <p id="minutes">00</p>
   <p class="timeRefMinutes">minutes</p>
   <p id="seconds">00</p>
-  <p class="timeRefSeconds">second</p>.elapsed<br>
-  <p dir="rtl">08.03.2018 • The Roxy • Kedr Livianskiy • LD<br>
-  08.04.2018 • The Roxy • Young M.A. • SM<br>
-  08.07.2018 • Capitol • DJ Durel ft. Migos "Hot Summer" • PA<br>
-  08.10.2018 • The Roxy • Photoshoot • LD<br>
-  08.10.2018 • Intercommunity Care Center • Rich the Kid "leave Me" • PA<br>
-  • • •<br>
-  • • •<br>
-  • • •<br></p>
+  <p class="timeRefSeconds">second</p>
+     .elapsed </h1>
+</div>
+
+<br>
+<p dir="rtl">
+08.03.2018 • The Roxy • Kedr Livianskiy • LD <br>
+08.04.2018 • The Roxy • Young M.A. • SM <br>
+08.07.2018 • Capitol • DJ Durel ft. Migos "Hot Summer" • PA <br>
+08.10.2018 • The Roxy • Photoshoot • LD <br>
+08.10.2018 • Intercommunity Care Center • Rich the Kid "leave Me" • PA <br>
+• • • <br>
+• • • <br>
+• • • <br>
+</p>
 </body>
 </html>
