--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -82,7 +82,8 @@
 
   <body>
 
-  <h1><div align="justify">Arrival: 25.07.2018 11:01PM PDT N 33° 56' 47.224''  W 118° 24' 28.757'' </div>
+  <h1><div align="justify">Arrival: 25.07.2018 11:01PM PDT <br>
+  N 33° 56' 47.224''  W 118° 24' 28.757'' </div>
 
 <div id="countup">
   <p id="days">00</p>
