--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=3.0, minimum-scale=0.86">
+  <meta name="viewport" content="width=device-width, initial-scale=0.86">
   <meta charset="UTF-8">
   <title>HSTRYnLA</title>
   <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
