--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=0.86">
+
   <meta charset="UTF-8">
   <title>HSTRYnLA</title>
   <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
@@ -14,11 +14,11 @@
     font-size: 19px;
     letter-spacing: 1.5px;
     line-height: 20px;
-    padding: 200px;
+    padding: 0px;
   }
   h1 {
     font-size: 15px;
-    margin-bottom: -12px;
+    margin-bottom: 0px;
   }
   h2 {
     font-size: 15px;
@@ -73,7 +73,7 @@
      margin: 0 0 0px;
      border-radius: 0px;
      color: black;
-     min-width: 1rem;
+     min-width: 0rem;
 
 
   }
@@ -83,7 +83,7 @@
 
   <body>
 
-  <h1><div align="justify">Arrival: 25.07.2018 11:01PM PDT <br>
+  <h1><div align="left">Arrival: 25.07.2018 11:01PM PDT <br>
   N 33° 56' 47.224''  W 118° 24' 28.757'' </div>
 
 <div id="countup">
