--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 
+  <meta name="viewport" content="width=device-width, initial-scale=0.86">
+
   <meta charset="UTF-8">
   <title>HSTRYnLA</title>
   <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
