--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -106,6 +106,7 @@
 08.04.2018 • The Roxy • Young M.A. • SM <br>
 08.07.2018 • DJ Durel ft. Migos "Hot Summer" • PA <br>
 08.10.2018 • The Roxy • Photoshoot • LD <br>
+<s>08.10.2018 • Rich The Kid "Leave Me" • PA</s><br>
 • • • <br>
 • • • <br>
 • • • <br>
