--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -105,7 +105,7 @@
 08.03.2018 • The Roxy • Kedr Livianskiy • LD <br>
 08.04.2018 • The Roxy • Young M.A. • SM <br>
 08.07.2018 • DJ Durel ft. Migos "Hot Summer" • PA <br>
-08.10.2018 • The Roxy • Photoshoot • LD <br>
+08.10.2018 • Ziggy Marley • Photoshoot • LD <br>
 • • • <br>
 • • • <br>
 • • • <br>
