--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -31,6 +31,16 @@
      color: #000000;
     text-decoration: none;
   }
+
+  .headertext {
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-right: 0px;
+    margin-left: 20px; 
+}
+p{
+   padding:15px;
+}
     
   </style>
   <script>
