--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -17,11 +17,12 @@
     letter-spacing: 1.5px;
     line-height: 20px;
     padding: 0px;
+    margin-right: 10px
   }
   h1 {
     font-size: 15px;
-    margin-bottom: 0px;
-    margin-left: 20px;
+    margin-top: 30px;
+    margin-left: 30px;
   }
   h2 {
     font-size: 15px;
