--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -17,7 +17,7 @@
     letter-spacing: 1.5px;
     line-height: 20px;
     padding: 0px;
-    margin-right: 20px
+    margin-right: 5%
   }
   h1 {
     font-size: 15px;
