--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -21,8 +21,8 @@
   }
   h1 {
     font-size: 15px;
-    margin-top: 30px;
-    margin-left: 30px;
+    margin-top: 5%;
+    margin-left: 10%;
   }
   h2 {
     font-size: 15px;
