--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -105,6 +105,9 @@
 08.07.2018 • DJ Durel ft. Migos "Hot Summer" • PA <br>
 08.10.2018 • Ziggy Marley • Photoshoot • LD <br>
 <s>08.10.2018 • Rich The Kid "Leave Me" • PA</s><br>
+08.13.2018 • The Roxy • Clario • LD <br>
+08.14.2018 • The Roxy • Clario • LD <br>
+08.15.2018 • The Roxy • Elder • LD <br>
 • • • <br>
 • • • <br>
 • • • <br>
