--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -108,6 +108,7 @@
 08.13.2018 • The Roxy • Clario • LD <br>
 08.14.2018 • The Roxy • Clario • LD <br>
 08.15.2018 • The Roxy • Elder • LD <br>
+08.18.2018 • NYC MOMA PS1 • Injury Reserve • PM <br>
 • • • <br>
 • • • <br>
 • • • <br>
