--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -109,6 +109,9 @@
 08.14.2018 • The Roxy • Clario • LD <br>
 08.15.2018 • The Roxy • Elder • LD <br>
 08.18.2018 • NYC MoMA PS1 • Injury Reserve • PM <br>
+08.22.2018 • The Roxy • Ella Mai • LD <br>
+08.23.2018 • The Roxy • Strife • LD <br>
+08.24.2018 • The Roxy • Bleeding Through • LD <br>
 • • • <br>
 • • • <br>
 • • • <br>
