--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -105,16 +105,19 @@
 08.07.2018 • DJ Durel ft. Migos "Hot Summer" • PA <br>
 08.10.2018 • Ziggy Marley • Photoshoot • LD <br>
 <s>08.10.2018 • Rich The Kid "Leave Me" • PA</s><br>
-08.13.2018 • The Roxy • Clario • LD <br>
+<font color=#c6c0cc> 08.13.2018 • The Roxy • Clario • LD <br>
 08.14.2018 • The Roxy • Clario • LD <br>
 08.15.2018 • The Roxy • Elder • LD <br>
 08.18.2018 • NYC MoMA PS1 • Injury Reserve • PM <br>
 08.22.2018 • The Roxy • Ella Mai • LD <br>
 08.23.2018 • The Roxy • Strife • LD <br>
 08.24.2018 • The Roxy • Bleeding Through • LD <br>
+08.30.2018 • The Roxy • The Strike • LD <br>
+08.31.2018 • The Roxy • Bad Bad Hats • LD <br>
 • • • <br>
 • • • <br>
 • • • <br>
+</font>
 </p>
 </body>
 </html>
