--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -59,6 +59,7 @@
    upTime.to=setTimeout(function(){ upTime(countTo); },1000);
   }
   </script>
+
   <style>
   #countup {
      text-align: left;
@@ -76,6 +77,65 @@
      color: black;
      min-width: 0rem;
   }
+  </style>
+
+  <style type="text/css">
+    
+    .blinking-cursor {
+  font-weight: 100;
+  font-size: 30px;
+  color: #2E3D48;
+  -webkit-animation: 1s blink step-end infinite;
+  -moz-animation: 1s blink step-end infinite;
+  -ms-animation: 1s blink step-end infinite;
+  -o-animation: 1s blink step-end infinite;
+  animation: 1s blink step-end infinite;
+}
+
+@keyframes "blink" {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color: black;
+  }
+}
+
+@-moz-keyframes blink {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color: black;
+  }
+}
+
+@-webkit-keyframes "blink" {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color: black;
+  }
+}
+
+@-ms-keyframes "blink" {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color: black;
+  }
+}
+
+@-o-keyframes "blink" {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color: black;
+  }
+}
   </style>
 
 </head>
@@ -114,9 +174,11 @@
 08.24.2018 • The Roxy • Bleeding Through • LD <br>
 08.30.2018 • The Roxy • The Strike • LD <br>
 08.31.2018 • The Roxy • Bad Bad Hats • LD <br>
+<span class="blinking-cursor">• • • <br>
 • • • <br>
 • • • <br>
-• • • <br>
+</span>
+
 </font>
 </p>
 </body>
