--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -83,8 +83,8 @@
     
     .blinking-cursor {
   font-weight: 100;
-  font-size: 30px;
-  color: #2E3D48;
+  font-size: 19px;
+  color: #c6c0cc;
   -webkit-animation: 1s blink step-end infinite;
   -moz-animation: 1s blink step-end infinite;
   -ms-animation: 1s blink step-end infinite;
