--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -138,6 +138,77 @@
 }
   </style>
 
+<script>
+
+ var TxtType = function(el, toRotate, period) {
+        this.toRotate = toRotate;
+        this.el = el;
+        this.loopNum = 0;
+        this.period = parseInt(period, 10) || 2000;
+        this.txt = '';
+        this.tick();
+        this.isDeleting = false;
+    };
+
+    TxtType.prototype.tick = function() {
+        var i = this.loopNum % this.toRotate.length;
+        var fullTxt = this.toRotate[i];
+
+        if (this.isDeleting) {
+        this.txt = fullTxt.substring(0, this.txt.length - 1);
+        } else {
+        this.txt = fullTxt.substring(0, this.txt.length + 1);
+        }
+
+        this.el.innerHTML = '<span class="wrap">'+this.txt+'</span>';
+
+        var that = this;
+        var delta = 200 - Math.random() * 100;
+
+        if (this.isDeleting) { delta /= 2; }
+
+        if (!this.isDeleting && this.txt === fullTxt) {
+        delta = this.period;
+        this.isDeleting = true;
+        } else if (this.isDeleting && this.txt === '') {
+        this.isDeleting = false;
+        this.loopNum++;
+        delta = 500;
+        }
+
+        setTimeout(function() {
+        that.tick();
+        }, delta);
+    };
+
+    window.onload = function() {
+        var elements = document.getElementsByClassName('typewrite');
+        for (var i=0; i<elements.length; i++) {
+            var toRotate = elements[i].getAttribute('data-type');
+            var period = elements[i].getAttribute('data-period');
+            if (toRotate) {
+              new TxtType(elements[i], JSON.parse(toRotate), period);
+            }
+        }
+        // INJECT CSS
+        var css = document.createElement("style");
+        css.type = "text/css";
+        css.innerHTML = ".typewrite > .wrap { border-right: 0.08em solid #fff}";
+        document.body.appendChild(css);
+    }
+
+</script>
+
+<style type="body {
+  background-color:#ce3635;
+  text-align: center;
+  color:#fff;
+  padding-top:10em;
+}
+
+* { color:#fff; text-decoration: none;}"></style>
+
+
 </head>
 
   <body>
@@ -159,12 +230,17 @@
 <br>
 <br>
 <br>
+
+
 <p dir="rtl">
 08.03.2018 • The Roxy • Kedr Livianskiy • LD <br>
 08.04.2018 • The Roxy • Young M.A. • SM <br>
 08.07.2018 • DJ Durel ft. Migos "Hot Summer" • PA <br>
 08.10.2018 • Ziggy Marley • Photoshoot • LD <br>
 <s>08.10.2018 • Rich The Kid "Leave Me" • PA</s><br>
+<h1>
+  <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, Im Si.", "I am Creative.", "I Love Design.", "I Love to Develop." ]'>
+    <span class="wrap"></span>
 <font color=#c6c0cc> 08.13.2018 • The Roxy • Clario • LD <br>
 08.14.2018 • The Roxy • Clario • LD <br>
 08.15.2018 • The Roxy • Elder • LD <br>
@@ -175,11 +251,16 @@
 08.30.2018 • The Roxy • The Strike • LD <br>
 08.31.2018 • The Roxy • Bad Bad Hats • LD <br>
 <span class="blinking-cursor">• • • <br>
+</a>
+</h1>
+
 • • • <br>
 • • • <br>
 </span>
 
 </font>
 </p>
+
+
 </body>
 </html>
