--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -238,9 +238,12 @@
 08.07.2018 • DJ Durel ft. Migos "Hot Summer" • PA <br>
 08.10.2018 • Ziggy Marley • Photoshoot • LD <br>
 <s>08.10.2018 • Rich The Kid "Leave Me" • PA</s><br>
+<div align="right">
 <h1>
-  <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, Im Si.", "I am Creative.", "I Love Design.", "I Love to Develop." ]'>
+  <a href="" class="typewrite" data-period="2000" data-type='[ "Incoming..." ]'>
     <span class="wrap"></span>
+    </a>
+</h1> </div>
 <font color=#c6c0cc> 08.13.2018 • The Roxy • Clario • LD <br>
 08.14.2018 • The Roxy • Clario • LD <br>
 08.15.2018 • The Roxy • Elder • LD <br>
@@ -251,8 +254,7 @@
 08.30.2018 • The Roxy • The Strike • LD <br>
 08.31.2018 • The Roxy • Bad Bad Hats • LD <br>
 <span class="blinking-cursor">• • • <br>
-</a>
-</h1>
+
 
 • • • <br>
 • • • <br>
