--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -239,11 +239,13 @@
 08.10.2018 • Ziggy Marley • Photoshoot • LD <br>
 <s>08.10.2018 • Rich The Kid "Leave Me" • PA</s><br>
 <div align="right">
-<h1>
   <a href="" class="typewrite" data-period="2000" data-type='[ "Incoming..." ]'>
     <span class="wrap"></span>
     </a>
-</h1> </div>
+</div>
+</p>
+<p dir="rtl">
+
 <font color=#c6c0cc> 08.13.2018 • The Roxy • Clario • LD <br>
 08.14.2018 • The Roxy • Clario • LD <br>
 08.15.2018 • The Roxy • Elder • LD <br>
