--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -255,12 +255,22 @@
 08.24.2018 • The Roxy • Bleeding Through • LD <br>
 08.30.2018 • The Roxy • The Strike • LD <br>
 08.31.2018 • The Roxy • Bad Bad Hats • LD <br>
-<span class="blinking-cursor">• • • <br>
+<div align="right">
+  <a href="" class="typewrite" data-period="2000" data-type='[ "..." ]'>
+    <span class="wrap"></span>
+    </a>
+</div>
+<div align="right">
+  <a href="" class="typewrite" data-period="2000" data-type='[ "..." ]'>
+    <span class="wrap"></span>
+    </a>
+</div>
+<div align="right">
+  <a href="" class="typewrite" data-period="2000" data-type='[ "..." ]'>
+    <span class="wrap"></span>
+    </a>
+</div>
 
-
-• • • <br>
-• • • <br>
-</span>
 
 </font>
 </p>
