--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8">
   <title>HSTRYnLA</title>
 
-  <link rel="stylesheet" type="text/css" href="stylesheet.css">
+  <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
   <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
 
   <script>
