--- a/RideTest.html
+++ b/RideTest.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8">
   <title>RDR IR TST</title>
 
-  <link rel="stylesheet" type="text/css" href="stylesheet.css">
+  <link rel="stylesheet" type="text/css" href="css/IRstyle.css">
 
   </head>
 
