--- a/RideTest.html
+++ b/RideTest.html
@@ -8,7 +8,7 @@
   <title>RDR IR TST</title>
 
   <link rel="stylesheet" type="text/css" href="css/IRstyle.css">
-  <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Vollkorn" rel="stylesheet">
 
   </head>
 
