--- a/RideTest.html
+++ b/RideTest.html
@@ -9,8 +9,7 @@
 
 
   <link rel="stylesheet" type="text/css" href="css/IRstyle.css">
-  <link href="https://fonts.googleapis.com/css?family=Vollkorn" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
 
   </head>
 
