--- a/RideTest.html
+++ b/RideTest.html
@@ -7,8 +7,45 @@
   <meta charset="UTF-8">
   <title>RDR IR TST</title>
 
-  <link rel="stylesheet" type="text/css" href="css/IRstyle.css"> 
   <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
+
+<style type="text/css">
+
+body {
+    background-color: #FFFFFF;
+    color: #000000;
+    font-family: 'VT323', monospace;
+    font-size: 24px;
+    letter-spacing: 1.5px;
+    line-height: 20px;
+    padding: 0px;
+    margin: 5%
+  }
+  h1 {
+  	font-family: 'VT323', monospace;
+    font-size: 28px;
+    margin-top: 2.5%;
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+  h2 {
+  	font-family: 'VT323', monospace;
+    font-size: 26px;
+  }
+    
+  a
+  {
+     color: #000000;
+    text-decoration: none;
+  }
+    
+ 
+}
+#content {
+    background: #FFFFFF;
+    width: 100%;
+}
+</style>
 
   </head>
 
