--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -69,6 +69,7 @@
 08.15.2018 • The Roxy • Elder • LD <br>
 <font color=#c6c0cc> 
 <s>008.18.2018 • NYC MoMA PS1 • Injury Reserve • PM </s> <br>
+08.18.2018 • Cub Sport "Music Video" • PA <br>
 08.22.2018 • The Roxy • Ella Mai • LD <br>
 08.23.2018 • The Roxy • Strife • LD <br>
 08.24.2018 • The Roxy • Bleeding Through • LD <br>
