--- a/RideTest.html
+++ b/RideTest.html
@@ -19,7 +19,9 @@ body {
     letter-spacing: 1.5px;
     line-height: 20px;
     padding: 0px;
-    margin: 20%
+    margin-left: 20%
+    margin-right:20%;
+    margin-top: 5%
   }
   h1 {
   	font-family: 'VT323', monospace;
