--- a/RideTest.html
+++ b/RideTest.html
@@ -19,8 +19,7 @@ body {
     letter-spacing: 1.5px;
     line-height: 20px;
     padding: 0px;
-    margin-left: 20%
-    margin-right:20%;
+    margin: 15%
     margin-top: 5%
   }
   h1 {
