--- a/RideTest.html
+++ b/RideTest.html
@@ -19,7 +19,7 @@ body {
     letter-spacing: 1.5px;
     line-height: 20px;
     padding: 0px;
-    margin: 15%
+    margin: 2.5% 20% 15%;
   }
   h1 {
   	font-family: 'VT323', monospace;
