--- a/RideTest.html
+++ b/RideTest.html
@@ -50,13 +50,14 @@ body {
   </head>
 
   <body>
-  	<h1>Injury Reserve Production Advance</h1>
+ <h1>Injury Reserve Production Advance</h1>
 <hr />
 <table border="1" style="border-collapse: collapse; width: 100%;">
 <tbody>
 <tr>
 <td style="width: 50%;">
-<table border="1" style="border-collapse: collapse; width: 100%;">
+<p></p>
+<table border="0" style="width: 90%; border-collapse: collapse; margin-left: auto; margin-right: auto;">
 <tbody>
 <tr>
 <td style="width: 50%; text-align: right;">
@@ -80,10 +81,10 @@ body {
 </tr>
 </tbody>
 </table>
-<p>&nbsp;</p>
+<p></p>
 </td>
 <td style="width: 50%;">
-<table border="1" style="border-collapse: collapse; width: 100%;">
+<table border="0" style="height: 63px; width: 90%; border-collapse: collapse; margin-left: auto; margin-right: auto;">
 <tbody>
 <tr style="height: 21px;">
 <td style="width: 50%; height: 21px; text-align: right;">Artist:&nbsp; &nbsp;</td>
@@ -100,7 +101,7 @@ body {
 </tbody>
 </table>
 &nbsp;
-<table border="1" style="border-collapse: collapse; width: 100%;">
+<table border="0" style="height: 84px; width: 90%; border-collapse: collapse; margin-left: auto; margin-right: auto;">
 <tbody>
 <tr style="height: 21px;">
 <td style="width: 50%; height: 21px; text-align: center;">Social Media</td>
@@ -124,7 +125,7 @@ body {
 </tr>
 </tbody>
 </table>
-<p></p>
+
 <h2>Key Info</h2>
 <hr />
 <p>Injury Reserve (IR) consists of 2 Vocalist and a Producer.&nbsp;<br />Traveling Party is 6 total.<br />All Lines connect as XLR<br />7 Inputs Total<br />Will REQUIRE 2 Wireless Microphones (Does NOT carry)<br />Injury Reserve's gear will run off of 110v Power.<br />We are not traveling with an Audio Engineer. The TM will double as LD.</p>
