--- a/RideTest.html
+++ b/RideTest.html
@@ -57,7 +57,7 @@ body {
 <tr>
 <td style="width: 50%;">
 <p></p>
-<table border="0" style="width: 90%; border-collapse: collapse; margin-left: auto; margin-right: auto;">
+<table border="0" style="width: 90%; border-collapse: collapse; margin-left: 1%; margin-right: 1%;">
 <tbody>
 <tr>
 <td style="width: 50%; text-align: right;">
