--- a/RideTest.html
+++ b/RideTest.html
@@ -8,13 +8,14 @@
   <title>RDR IR TST</title>
 
   <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Kosugi+Maru" rel="stylesheet">
 
 <style type="text/css">
 
 body {
     background-color: #FFFFFF;
     color: #000000;
-    font-family: 'VT323', monospace;
+    font-family: 'Kosugi Maru', sans-serif;
     font-size: 24px;
     letter-spacing: 1.5px;
     line-height: 20px;
