--- a/RideTest.html
+++ b/RideTest.html
@@ -16,9 +16,9 @@ body {
     background-color: #FFFFFF;
     color: #000000;
     font-family: 'Kosugi Maru', sans-serif;
-    font-size: 24px;
-    letter-spacing: 1.5px;
-    line-height: 20px;
+    font-size: 19px;
+    letter-spacing: auto;
+    line-height: auto;
     padding: 0px;
     margin: 2.5% 20% 15%;
   }
