--- a/RideTest.html
+++ b/RideTest.html
@@ -8,14 +8,14 @@
   <title>RDR IR TST</title>
 
   <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Kosugi+Maru" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Work+Sans:300" rel="stylesheet">
 
 <style type="text/css">
 
 body {
     background-color: #FFFFFF;
     color: #000000;
-    font-family: 'Kosugi Maru', sans-serif;
+    font-family: 'Work Sans', sans-serif;
     font-size: 19px;
     letter-spacing: auto;
     line-height: auto;
