--- a/RideTest.html
+++ b/RideTest.html
@@ -19,19 +19,23 @@ body {
     font-size: 19px;
     letter-spacing: auto;
     line-height: auto;
-    padding: 0px;
     margin: 2.5% 20% 15%;
   }
   h1 {
   	font-family: 'VT323', monospace;
-    font-size: 28px;
-    margin-top: 10%;
-    margin-left: 15%;
-    margin-right: 15%;
+    font-size: 60px;
+    text-align: center;
+    ;
   }
   h2 {
   	font-family: 'VT323', monospace;
-    font-size: 26px;
+    font-size: 45px;
+    margin-left: 5%
+  }
+   h3 {
+  	font-family: 'VT323', monospace;
+    font-size: 36px;
+    margin-left: 1.5%
   }
     
   a
@@ -181,7 +185,7 @@ body {
 <td style="width: 50%; text-align: center;">Monitor Mixes</td>
 </tr>
 <tr>
-<td style="width: 50%; text-align: left; padding-left: 60px;">1. Track L<br />2. Track R<br />3. Nate Vocal (Processed Onstage)<br />4. Groggs Vocal (Dry)<br />5. Effects Vocal 1 (Processed Onstage)<br />6 Talkback to FOH</td>
+<td style="width: 50%; text-align: left; padding-left: 60px;">1. Track L<br />2. Track R<br />3. Nate Vocal (Processed Onstage)<br />4. Grogg's Vocal (Dry)<br />5. Effects Vocal 1 (Processed Onstage)<br />6 Talkback to FOH</td>
 <td style="width: 50%;">
 <p style="padding-left: 60px;">1. Producer Wedge<br />2. DSR-DSC Wedges 1-3<br />3. DSL Wedge</p>
 </td>
