--- a/RideTest.html
+++ b/RideTest.html
@@ -144,15 +144,19 @@ body {
 <table border="1" style="border-collapse: collapse; width: 100%;">
 <tbody>
 <tr style="height: 21px;">
-<td style="width: 50%; height: 21px; text-align: left;">Backline Needed</td>
-<td style="width: 50%; height: 21px; text-align: right;">Carried</td>
+<td style="width: 50%; height: 21px; text-align: left;"><strong>&nbsp; &nbsp;Backline Needed</strong></td>
+<td style="width: 50%; height: 21px; text-align: right;"><strong>Carried&nbsp; &nbsp;</strong></td>
 </tr>
 <tr style="height: 121px;">
 <td style="width: 50%; height: 121px;">
 <p style="text-align: center;">2 Wireless Microphone</p>
-<p style="text-align: center;">Wireless Microphones should be Shure or Sennheiser&nbsp;Equivalent<br />(Shure UHF-R at Minimum, not ULX, no PRG or PGX)<br /><span style="text-decoration: underline;">Must to be&nbsp;approved&nbsp;by TM PRIOR to DOS.</span></p>
+<p style="text-align: center;"><sub>(Shure UHF-R at Minimum, not ULX, no PRG or PGX)</sub><br /><span style="text-decoration: underline;">Must to be&nbsp;approved&nbsp;by TM PRIOR to DOS.</span></p>
 </td>
-<td style="width: 50%; height: 121px; text-align: center;">Injury Reserve carries:</td>
+<td style="width: 50%; height: 121px; text-align: center;">
+<p></p>
+<p></p>
+<p>Injury Reserve carries the following:</p>
+</td>
 </tr>
 <tr style="height: 14px;">
 <td style="width: 50%; height: 21px; text-align: center;">3 Wired Shure SM58 Microphones</td>
@@ -173,6 +177,7 @@ body {
 </tbody>
 </table>
 <p></p>
+<p></p>
 <p>All Carried Gear runs on 110v Power.&nbsp;<br />Need the local equivalent of 2x 15+ Amp circuits w/ US Type B 3 Pin Outlets<br />One USC for Producer (4 Outlets)<br />One DSR for Vocal Processing (4 Outlets)</p>
 <p></p>
 
@@ -181,8 +186,8 @@ body {
 <table border="1" style="border-collapse: collapse; width: 100%;">
 <tbody>
 <tr>
-<td style="width: 50%; text-align: center;">Inputs</td>
-<td style="width: 50%; text-align: center;">Monitor Mixes</td>
+<td style="width: 50%; text-align: center;"><span style="text-decoration: underline;"><strong>Inputs</strong></span></td>
+<td style="width: 50%; text-align: center;"><strong><span style="text-decoration: underline;">Monitor Mixes</span></strong></td>
 </tr>
 <tr>
 <td style="width: 50%; text-align: left; padding-left: 60px;">1. Track L<br />2. Track R<br />3. Nate Vocal (Processed Onstage)<br />4. Grogg's Vocal (Dry)<br />5. Effects Vocal 1 (Processed Onstage)<br />6 Talkback to FOH</td>
@@ -194,7 +199,6 @@ body {
 </table>
 <p></p>
 <p>Inputs 1-4 will got into all Monitor Mixes.<br />Input 5 "Effects Vocal 1" will ONLY be in Mix 3<br />This is to prevent feedback due to heavy processing.<br />Monitor Mix 3 will match Mix 2, only with Effects Vocal 1 added.&nbsp;</p>
-
 <h2>Stage Plot</h2>
 <hr />
 <p>Image&nbsp;Inline</p>
@@ -220,18 +224,19 @@ body {
 <tbody>
 <tr>
 <td style="width: 50%;">
-<p style="padding-left: 120px; text-align: left;"><span style="text-decoration: underline;">Food</span><br />Ezekiel Bread<br />Creamy Peanut Butter<br />Grape Jelly<br />White Cheddar Popcorn<br />Regular Cheez‐It&reg;<br />Trail Mix<br />Chocolate Chip Cookie Dough Quest&reg; Bars<br />Harvest Cheddar Sun Chips&reg;</p>
+<p style="padding-left: 120px; text-align: left;"><strong><span style="text-decoration: underline;">Food</span></strong><br />Ezekiel Bread<br />Creamy Peanut Butter<br />Grape Jelly<br />White Cheddar Popcorn<br />Regular Cheez‐It&reg;<br />Trail Mix<br />Chocolate Chip Cookie Dough Quest&reg; Bars<br />Harvest Cheddar Sun Chips&reg;</p>
 </td>
 <td style="width: 50%;">
-<p style="padding-left: 30px;"><span style="text-decoration: underline;">Sundries</span><br />12 x Clean, small stage towels - black preferred<br />12 x Clean, large bath towels<br />(NO BAR RAGS!!!)<br />Halls Intense Cooling Lozenges (Silver/Grey bag)<br />Brand Chapstick<br />Recyclable cups, plates, and cutlery<br />Paper Towels, Napkins<br />Beer / Wine Opener<br />Wine Glasses<br />Bluetooth Speaker (not purchased)</p>
+<p style="padding-left: 30px;"><span style="text-decoration: underline;"></span></p>
+<p style="padding-left: 30px;"><strong><span style="text-decoration: underline;">Sundries</span></strong><br />12 x Clean, small stage towels - black preferred<br />12 x Clean, large bath towels<br />(NO BAR RAGS!!!)<br />Halls Intense Cooling Lozenges (Silver/Grey bag)<br />Brand Chapstick<br />Recyclable cups, plates, and cutlery<br />Paper Towels, Napkins<br />Beer / Wine Opener<br />Wine Glasses<br />Bluetooth Speaker (not purchased)</p>
 </td>
 </tr>
 <tr>
 <td style="width: 50%;">
-<p style="padding-left: 120px;"><span style="text-decoration: underline;">Beverages</span><br />Assorted LaCroix&reg;<br />Sugar-FreeRedBull&reg;<br />Dr. Pepper<br />Good Water (Chilled &amp; Room Temp)<br />Box of Throat Coat Tea w/ Hot Water Kettle<br />Local Honey, Fresh Ginger, Lemons</p>
+<p style="padding-left: 120px;"><strong><span style="text-decoration: underline;">Beverages</span></strong><br />Assorted LaCroix&reg;<br />Sugar-FreeRedBull&reg;<br />Dr. Pepper<br />Good Water (Chilled &amp; Room Temp)<br />Box of Throat Coat Tea w/ Hot Water Kettle<br />Local Honey, Fresh Ginger, Lemons</p>
 </td>
 <td style="width: 50%;">
-<p style="padding-left: 30px;"><span style="text-decoration: underline;">Alcohol</span><br />Wine<br />Whiskey<br />Beer Cans</p>
+<p style="padding-left: 30px;"><strong><span style="text-decoration: underline;">Alcohol</span></strong><br />Wine<br />Whiskey<br />Beer Cans</p>
 </td>
 </tr>
 </tbody>
