--- a/RideTest.html
+++ b/RideTest.html
@@ -55,6 +55,16 @@ body {
   </head>
 
   <body>
+  	<a href="#KeyInfo">Key Info</a> |
+<a href="#Gear">Gear + Backline</a> |
+<a href="#Inputs">Inputs + Mixes</a> |
+<a href="#StagePlots">Stage Plots</a> |
+
+<a href="#DressingRooms">Dressing Rooms</a> |
+<a href="#Office">Production Office</a> |
+<a href="#Meals">Meals</a> |
+<a href="#Hospitality">Hospo</a> |
+<a href="#TravelParty">Travel Party</a>
  <h1>Injury Reserve Production Advance</h1>
 <hr />
 <table border="1" style="border-collapse: collapse; width: 100%;">
@@ -131,14 +141,14 @@ body {
 </tbody>
 </table>
 
-<h2>Key Info</h2>
+<div id="KeyInfo"><h2>Key Info</h2></div>
 <hr />
 <p>Injury Reserve (IR) consists of 2 Vocalist and a Producer.&nbsp;<br />Traveling Party is 6 total.<br />All Lines connect as XLR<br />7 Inputs Total<br />Will REQUIRE 2 Wireless Microphones (Does NOT carry)<br />Injury Reserve's gear will run off of 110v Power.<br />We are not traveling with an Audio Engineer. The TM will double as LD.</p>
 <div class="page" title="Page 3">
 <div class="layoutArea">
 <div class="column">
 
-<h2><span>Gear + Backline</span></h2>
+<div id="Gear"><h2><span>Gear + Backline</span></h2></div>
 <hr />
 <p><span>Purchaser agrees to provide a&nbsp;</span>professional audio system capable of producing 110dbA without distortion, without the engagement of any limiting, and without danger of failure or thermal protection. A professional quality, properly tuned, time-aligned speaker system with even coverage (+/- 3db) throughout the audience areas of the venue or festival.</p>
 <table border="1" style="border-collapse: collapse; width: 100%;">
@@ -181,7 +191,7 @@ body {
 <p>All Carried Gear runs on 110v Power.&nbsp;<br />Need the local equivalent of 2x 15+ Amp circuits w/ US Type B 3 Pin Outlets<br />One USC for Producer (4 Outlets)<br />One DSR for Vocal Processing (4 Outlets)</p>
 <p></p>
 
-<h2>Inputs + Mixes</h2>
+<div id="Inputs"><h2>Inputs + Mixes</h2></div>
 <hr />
 <table border="1" style="border-collapse: collapse; width: 100%;">
 <tbody>
@@ -199,7 +209,7 @@ body {
 </table>
 <p></p>
 <p>Inputs 1-4 will got into all Monitor Mixes.<br />Input 5 "Effects Vocal 1" will ONLY be in Mix 3<br />This is to prevent feedback due to heavy processing.<br />Monitor Mix 3 will match Mix 2, only with Effects Vocal 1 added.&nbsp;</p>
-<h2>Stage Plot</h2>
+<div id="StagePlots"><h2>Stage Plot</h2></div>
 <hr />
 <p>Image&nbsp;Inline</p>
 <p>Links to Download</p>
@@ -209,16 +219,17 @@ body {
 <div class="page" title="Page 9">
 <div class="layoutArea">
 <div class="column">
-<h2>Backstage</h2>
+<div id="Backstage"><h2>Backstage</h2></div>
 <hr />
-<h3><span></span>Dressing Rooms</h3>
+<div id="DressingRooms"><h3><span></span>Dressing Rooms</h3></div>
 <p>Injury Reserve&nbsp;<span>will need (1) dressing room&nbsp;</span>for the sole use of Injury Reserve (NO OPENING ACTS - NO PRESS). No person other than Injiury Reserve and crew shall have access to the dressing room without the prior permission of Artist Manager.<span><br />Please plan to leave the dressing rooms open at least (60) minutes after loadout.</span></p>
 <p><span>Room should be lockable, clean, well-lit, air-conditioned, and in close proximity to the stage. Please make sure hot &amp; cold water is working, hand soap, a full-length mirror, private bathroom, power strips, empty trash cans, a cooler/fridge, and comfortably furnished. </span></p>
-<h3><span>Production Office</span></h3>
+<div id="Office"><h3><span>Production Office</span></h3></div>
 <p>Please provide a clean, well lit, quiet production office (preferably away from the stage) with table, desk chair, working internet, and access to printer.<br />This room should be locked at all times. The keys are to be given to Artist &amp; Tour Manager upon the time of arrival at the venue.</p>
-<h3>Meals</h3>
+<div id="Meals"><h3>Meals</h3></div>
 <p>If you are not providing a catered meal, please have a "menu book" available in the Production Office with lunch and dinner options.<br />Please note there are Vegetarians and Vegans in the touring party and need to have equal options avialable.<br />Buyout to be provided in Cash upon arrival if a hot meal is not available.</p>
-<h3>Hospitality</h3>
+
+<div id="Hospitality"><h3>Hospitality</h3></div>
 <hr />
 <table border="1" style="border-collapse: collapse; width: 100%;">
 <tbody>
@@ -246,7 +257,7 @@ body {
 </div>
 </div>
 
-<h2>Travel&nbsp;Party</h2>
+<div id="TravelParty"><h2>Travel&nbsp;Party</h2></div>
 <p>All Talent and Crew are 21+</p>
 <table border="1" style="border-collapse: collapse; width: 100%;">
 <tbody>
