--- a/RideTest.html
+++ b/RideTest.html
@@ -143,7 +143,7 @@ body {
 
 <div id="KeyInfo"><h2>Key Info</h2></div>
 <hr />
-<p>Injury Reserve (IR) consists of 2 Vocalist and a Producer.&nbsp;<br />Traveling Party is 6 total.<br />All Lines connect as XLR<br />7 Inputs Total<br />Will REQUIRE 2 Wireless Microphones (Does NOT carry)<br />Injury Reserve's gear will run off of 110v Power.<br />We are not traveling with an Audio Engineer. The TM will double as LD.</p>
+<p>Injury Reserve (IR) consists of 2 Vocalist and a Producer.&nbsp;<br />Traveling Party is 6 total.<br />All Lines connect as XLR<br />6 Inputs Total<br />Will REQUIRE 2 Wireless Microphones (Does NOT carry)<br />Injury Reserve's gear will run off of 110v Power.<br />We are not traveling with an Audio Engineer. The TM will double as LD.</p>
 <div class="page" title="Page 3">
 <div class="layoutArea">
 <div class="column">
@@ -169,7 +169,7 @@ body {
 </td>
 </tr>
 <tr style="height: 14px;">
-<td style="width: 50%; height: 21px; text-align: center;">3 Wired Shure SM58 Microphones</td>
+<td style="width: 50%; height: 21px; text-align: center;">2 Wired Shure SM58 Microphones</td>
 <td style="width: 50%; height: 21px; text-align: center;">Laptops, Audio Interfaces, DI Boxes, and Controllers</td>
 </tr>
 <tr style="height: 21px;">
@@ -200,7 +200,7 @@ body {
 <td style="width: 50%; text-align: center;"><strong><span style="text-decoration: underline;">Monitor Mixes</span></strong></td>
 </tr>
 <tr>
-<td style="width: 50%; text-align: left; padding-left: 60px;">1. Track L<br />2. Track R<br />3. Nate Vocal (Processed Onstage)<br />4. Grogg's Vocal (Dry)<br />5. Effects Vocal 1 (Processed Onstage)<br />6 Talkback to FOH</td>
+<td style="width: 50%; text-align: left; padding-left: 60px;">1. Track L<br />2. Track R<br />3. Nate Vocal (Processed Onstage)<br />4. Groggs Vocal (Dry)<br />5. Effects Vocal 1 (Processed Onstage)<br />6 Talkback to FOH</td>
 <td style="width: 50%;">
 <p style="padding-left: 60px;">1. Producer Wedge<br />2. DSR-DSC Wedges 1-3<br />3. DSL Wedge</p>
 </td>
