--- a/RideTest.html
+++ b/RideTest.html
@@ -76,7 +76,7 @@ body {
 <tbody>
 <tr>
 <td style="width: 50%; text-align: right;">
-<p>Artist&nbsp;Manager:&nbsp; &nbsp;</p>
+<p><strong>Artist&nbsp;Manager:&nbsp; &nbsp;</strong></p>
 <p></p>
 <p></p>
 </td>
@@ -87,7 +87,7 @@ body {
 </tr>
 <tr>
 <td style="width: 50%; text-align: right;">
-<p>Tour / Production Manager:&nbsp; &nbsp;</p>
+<p><strong>Tour / Production Manager:&nbsp; &nbsp;</strong></p>
 <p></p>
 </td>
 <td style="width: 50%;">
@@ -102,7 +102,7 @@ body {
 <table border="0" style="height: 63px; width: 90%; border-collapse: collapse; margin-left: auto; margin-right: auto;">
 <tbody>
 <tr style="height: 21px;">
-<td style="width: 50%; height: 21px; text-align: right;">Artist:&nbsp; &nbsp;</td>
+<td style="width: 50%; height: 21px; text-align: right;"><strong>Artist:&nbsp; &nbsp;</strong></td>
 <td style="width: 50%; height: 21px;">Parker Corey (Producer)</td>
 </tr>
 <tr style="height: 21px;">
@@ -119,8 +119,8 @@ body {
 <table border="0" style="height: 84px; width: 90%; border-collapse: collapse; margin-left: auto; margin-right: auto;">
 <tbody>
 <tr style="height: 21px;">
-<td style="width: 50%; height: 21px; text-align: center;">Social Media</td>
-<td style="width: 50%; height: 21px; text-align: center;">Identifier</td>
+<td style="width: 50%; height: 21px; text-align: center;"><span style="text-decoration: underline;"><strong>Social Media</strong></td>
+<td style="width: 50%; height: 21px; text-align: center;"><span style="text-decoration: underline;"><strong>Identifier</strong></td>
 </tr>
 <tr style="height: 21px;">
 <td style="width: 50%; height: 21px; text-align: center;">Website</td>
@@ -143,7 +143,7 @@ body {
 
 <div id="KeyInfo"><h2>Key Info</h2></div>
 <hr />
-<p>Injury Reserve (IR) consists of 2 Vocalist and a Producer.&nbsp;<br />Traveling Party is 6 total.<br />All Lines connect as XLR<br />6 Inputs Total<br />Will REQUIRE 2 Wireless Microphones (Does NOT carry)<br />Injury Reserve's gear will run off of 110v Power.<br />We are not traveling with an Audio Engineer. The TM will double as LD.</p>
+<p>Injury Reserve (IR) consists of 2 Vocalist and a Producer.&nbsp;<br />Will require 2 Wireless Microphones (Does NOT carry)<br />One Wired Mic will run through some processing and be sent back to you (through our own DI)<br />One Wireless Mic will need to be routed through one of our pedals (DSR). It will be processed and sent back.<br />The remaining two inputs are L+R Audio Track & Talk Back to FOH<br />All Lines connect to house as XLR<br />6 Inputs Total<br />Injury Reserve's gear will run off of 110v Power.<br />Traveling Party is 6 total.<br />We are not traveling with an Audio Engineer. The TM will double as LD.</p>
 <div class="page" title="Page 3">
 <div class="layoutArea">
 <div class="column">
@@ -262,9 +262,9 @@ body {
 <table border="1" style="border-collapse: collapse; width: 100%;">
 <tbody>
 <tr style="height: 21px;">
-<td style="width: 25%; height: 21px; text-align: center;">Name</td>
-<td style="width: 25%; height: 21px; text-align: center;">Role</td>
-<td style="width: 25%; height: 21px; text-align: center;">Dietary Restrictions</td>
+<td style="width: 25%; height: 21px; text-align: center;"><strong>Name</strong></td>
+<td style="width: 25%; height: 21px; text-align: center;"><strong>Role</strong></td>
+<td style="width: 25%; height: 21px; text-align: center;"><strong>Dietary Restrictions</strong></td>
 </tr>
 <tr style="height: 21px;">
 <td style="width: 25%; height: 21px; text-align: center;">Nick Herbert</td>
