--- a/RideTest.html
+++ b/RideTest.html
@@ -262,9 +262,9 @@ body {
 <table border="1" style="border-collapse: collapse; width: 100%;">
 <tbody>
 <tr style="height: 21px;">
-<td style="width: 25%; height: 21px; text-align: center;"><strong>Name</strong></td>
-<td style="width: 25%; height: 21px; text-align: center;"><strong>Role</strong></td>
-<td style="width: 25%; height: 21px; text-align: center;"><strong>Dietary Restrictions</strong></td>
+<td style="width: 25%; height: 21px; text-align: center;"><span style="text-decoration: underline;"><strong>Name</strong></td>
+<td style="width: 25%; height: 21px; text-align: center;"><span style="text-decoration: underline;"><strong>Role</strong></td>
+<td style="width: 25%; height: 21px; text-align: center;"><span style="text-decoration: underline;"><strong>Dietary Restrictions</strong></td>
 </tr>
 <tr style="height: 21px;">
 <td style="width: 25%; height: 21px; text-align: center;">Nick Herbert</td>
