--- a/RideTest.html
+++ b/RideTest.html
@@ -43,8 +43,12 @@ body {
      color: #000000;
     text-decoration: none;
   }
-    
- 
+  .center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
 }
 #content {
     background: #FFFFFF;
@@ -211,8 +215,9 @@ body {
 <p>Inputs 1-4 will got into all Monitor Mixes.<br />Input 5 "Effects Vocal 1" will ONLY be in Mix 3<br />This is to prevent feedback due to heavy processing.<br />Monitor Mix 3 will match Mix 2, only with Effects Vocal 1 added.&nbsp;</p>
 <div id="StagePlots"><h2>Stage Plot</h2></div>
 <hr />
-<p>Image&nbsp;Inline</p>
-<p>Links to Download</p>
+<img src="https://i.imgur.com/FuTKWeM.jpg" class="center"><br>
+<a href="https://drive.google.com/file/d/1IpxosYsbInWlJicEJUC5yrEuA0pHldv_/view?usp=sharing"><span style="text-decoration: underline;">Download as .PDF</span></a><br>
+<a href="https://drive.google.com/file/d/10XpYXh0zuQSHFewrvEZ0IIcuo6SJj2Di/view?usp=sharing"><span style="text-decoration: underline;">Download as .JPG</span></a>
 <p></p>
 <h2></h2>
 
@@ -303,5 +308,14 @@ body {
 </div>
 </div>
 <hr />
+
+
+<button onclick="myFunction()">Print Advance</button>
+
+<script>
+function myFunction() {
+    window.print();
+}
+</script>
   	</body>
 </html>
