--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -68,7 +68,7 @@
 08.14.2018 • The Roxy • Clario • LD <br>
 08.15.2018 • The Roxy • Elder • LD <br>
 <s>08.18.2018 • NYC MoMA PS1 • Injury Reserve • PM </s> <br>
-08.18.2018 • Cub Sport "Music Video" • PA <br>
+08.18.2018 • Cub Sport "Sometimes" • PA <br>
 <font color=#c6c0cc> 
 08.22.2018 • The Roxy • Ella Mai • LD <br>
 08.23.2018 • The Roxy • Strife • LD <br>
