--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -7,6 +7,14 @@
   <meta charset="UTF-8">
   <title>HSTRYnLA</title>
 
+<link rel="apple-touch-icon" sizes="180x180" href="Icons/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="Icons/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="Icons/favicon-16x16.png">
+<link rel="manifest" href="Icons/site.webmanifest">
+<link rel="mask-icon" href="Icons/safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
+
   <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
   <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
 
@@ -67,9 +75,9 @@
 08.13.2018 • The Roxy • Clario • LD <br>
 08.14.2018 • The Roxy • Clario • LD <br>
 08.15.2018 • The Roxy • Elder • LD <br>
-<s>08.18.2018 • NYC MoMA PS1 • Injury Reserve • PM </s> <br>
-08.18.2018 • Cub Sport "Sometimes" • PA <br>
 <font color=#c6c0cc> 
+<s>08.18.2018 • NYC MoMA PS1 • Injury Reserve • PM </s> <br>
+08.18.2018 • Cub Sport "Music Video" • PA <br>
 08.22.2018 • The Roxy • Ella Mai • LD <br>
 08.23.2018 • The Roxy • Strife • LD <br>
 08.24.2018 • The Roxy • Bleeding Through • LD <br>
