--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -80,6 +80,7 @@
 08.22.2018 • The Roxy • Ella Mai • LD <br>
 08.23.2018 • The Roxy • Strife • LD <br>
 08.24.2018 • The Roxy • Bleeding Through • LD <br>
+08.28.2018 • Metric Video • PA<br>
 <font color=#c6c0cc>
 08.30.2018 • The Roxy • The Strike • LD <br>
 08.31.2018 • The Roxy • Bad Bad Hats • LD <br>
