--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -72,8 +72,8 @@
 08.07.2018 • DJ Durel ft. Migos "Hot Summer" • PA <br>
 08.10.2018 • Ziggy Marley • Photoshoot • LD <br>
 <s>08.10.2018 • Rich The Kid "Leave Me" • PA</s><br>
-08.13.2018 • The Roxy • Clario • LD <br>
-08.14.2018 • The Roxy • Clario • LD <br>
+08.13.2018 • The Roxy • Clairo • LD <br>
+08.14.2018 • The Roxy • Clairo • LD <br>
 08.15.2018 • The Roxy • Elder • LD <br> 
 <s>08.18.2018 • NYC MoMA PS1 • Injury Reserve • PM </s> <br>
 08.18.2018 • Cub Sport "Music Video" • PA <br>
