--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -81,8 +81,8 @@
 08.23.2018 • The Roxy • Strife • LD <br>
 08.24.2018 • The Roxy • Bleeding Through • LD <br>
 08.28.2018 • Metric Video • PA<br>
+08.30.2018 • The Roxy • The Strike with Appearance by Morrissey• LD <br>
 <font color=#c6c0cc>
-08.30.2018 • The Roxy • The Strike • LD <br>
 08.31.2018 • The Roxy • Bad Bad Hats • LD <br>
  • • • <br>
  • • • <br>
