--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -82,8 +82,16 @@
 08.24.2018 • The Roxy • Bleeding Through • LD <br>
 08.28.2018 • Metric Video • PA<br>
 08.30.2018 • The Roxy • The Strike with Appearance by Morrissey• LD <br>
-<font color=#c6c0cc>
 08.31.2018 • The Roxy • Bad Bad Hats • LD <br>
+
+09.01.2018 • The Roxy • Devour • LD <br>
+09.03.2018 • The Roxy • Labor Day Showcase • LD <br>
+09.04.2018 • The Roxy • Smart, Funny, & Black • LD <br>
+09.08.2018 • The Roxy • Ceramic Animal • LD <br>
+ <font color=#c6c0cc>
+09.09.2018 • The Roxy • Private Event • LD <br>
+09.12.2018 • The Roxy • Slenderbodies • LD <br>
+09.20.2018 • The Roxy • Built To Spill • LD <br>
  • • • <br>
  • • • <br>
  • • • <br>
