--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -83,7 +83,7 @@
 08.28.2018 • Metric Video • PA<br>
 08.30.2018 • The Roxy • The Strike with Appearance by Morrissey• LD <br>
 08.31.2018 • The Roxy • Bad Bad Hats • LD <br>
-
+<s>09.01.2018 • Made In Amrica 2019 • Injury Reserve • PM </s> <br>
 09.01.2018 • The Roxy • Devour • LD <br>
 09.03.2018 • The Roxy • Labor Day Showcase • LD <br>
 09.04.2018 • The Roxy • Smart, Funny, & Black • LD <br>
