--- a/HSTRYnLA.html
+++ b/HSTRYnLA.html
@@ -85,13 +85,16 @@
 08.31.2018 • The Roxy • Bad Bad Hats • LD <br>
 <s>09.01.2018 • Made In Amrica 2019 • Injury Reserve • PM </s> <br>
 09.01.2018 • The Roxy • Devour • LD <br>
-09.03.2018 • The Roxy • Labor Day Showcase • LD <br>
+09.03.2018 • The Roxy • Cali Plug Labor Day Showcase • LD <br>
 09.04.2018 • The Roxy • Smart, Funny, & Black • LD <br>
 09.08.2018 • The Roxy • Ceramic Animal • LD <br>
- <font color=#c6c0cc>
-09.09.2018 • The Roxy • Private Event • LD <br>
+09.09.2018 • The Roxy • Gary Burden Memorial • LD <br>
 09.12.2018 • The Roxy • Slenderbodies • LD <br>
+09.18.2018 • The Roxy • Maintenance Day <br>
 09.20.2018 • The Roxy • Built To Spill • LD <br>
+ <font color=#c6c0cc>
+09.25.2018 • The Roxy • Zoe Church • LD <br>
+09.29.2018 • The Roxy • TBD • LD <br>
  • • • <br>
  • • • <br>
  • • • <br>
