--- a/RideTest.html
+++ b/RideTest.html
@@ -55,6 +55,12 @@ body {
     width: 100%;
 }
 </style>
+<style type="text/css">
+    table { page-break-inside:auto }
+    tr    { page-break-inside:avoid; page-break-after:auto }
+    thead { display:table-header-group }
+    tfoot { display:table-footer-group }
+</style>
 
   </head>
 
