--- a/RideTest.html
+++ b/RideTest.html
@@ -54,13 +54,18 @@ body {
     background: #FFFFFF;
     width: 100%;
 }
+  #table{
+    max-width: 2480px;
+    width:100%;
+  }
+  #table td{
+    width: auto;
+    overflow: hidden;
+    word-wrap: break-word;
+  }
 </style>
-<style type="text/css">
-    table { page-break-inside:auto }
-    tr    { page-break-inside:avoid; page-break-after:auto }
-    thead { display:table-header-group }
-    tfoot { display:table-footer-group }
-</style>
+
+
 
   </head>
 
